--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -1,5 +1,2 @@
-<h1>oi mundo</h1>
+<h1>oi mundo novo</h1>
 <p>teste</p>
-<p>outro teste</p>
-<p>vamos a outro teste de 60seg</p>
-<p>outro teste com interrupção</p>
