--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -1,2 +1,14 @@
-<h1>oi mundo novo</h1>
-<p>teste</p>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <main>
+    <h1>teste dois</h1>
+  </main>
+</body>
+</html>
