--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -9,6 +9,7 @@
 <body>
   <main>
     <h1>teste dois</h1>
+    <img src="/src/imagens/Simpliflick [Tamanho original].png" alt="">
   </main>
 </body>
 </html>
