--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -1,15 +1,176 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Página teste</title>
+  <link rel="stylesheet" href="/estilos.css" />
 </head>
+
 <body>
   <main>
-    <h1>teste dois</h1>
-    <img src="/src/imagens/Simpliflick [Tamanho original].png" alt="">
+    <header class="cabecalho">
+      <img src="" alt="Foto logo">
+      <nav>
+        <ul class="menu">
+          <a href="#home">
+            <li>Início</li>
+          </a>
+          <a href="#quem-somos">
+            <li>Quem Somos</li>
+          </a>
+          <a href="#sobre">
+            <li>Sobre Nós</li>
+          </a>
+          <a href="#time">
+            <li>Nosso Time</li>
+          </a>
+          <a href="#serv">
+            <li>Serviços</li>
+          </a>
+          <a href="#modalidades">
+            <li>Modalidades</li>
+          </a>
+          <a href="#programas">
+            <li>Programas</li>
+          </a>
+          <a href="#inscreva-se">
+            <li>Inscreva-se</li>
+          </a>
+          <a href="#contato">
+            <li>contato</li>
+          </a>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="home" class="inicio">
+      <div class="nome-slogan">
+        <h1>Conexão Rítmica</h1>
+        <h2>Slogan</h2>
+      </div>
+      <div class="txt-inicio">
+      <p>
+        Um resumo da empresa com um slogan como: “Transformando sonhos em movimento.”
+        Um breve resumo sobre as sócias e sua experiência.
+      </p>
+      </div>
+    </section>
+
+    <section class="infos-cr">
+      <div class="info-gerais cartao-info">
+        <div id="quem-somos">
+          <h2>
+            Quem Somos
+          </h2>
+          <p>
+            Exemplo de conteúdo:
+            "Conheça as fundadoras e treinadoras, cada uma com vasta experiência no esporte, dedicadas a transformar o
+            aprendizado em ginástica rítmica em algo inesquecível."
+          </p>
+        </div>
+
+
+        <div id="sobre" class="cartao-info">
+          <h2>Sobre Nós</h2>
+          <p>
+            Exemplo de conteúdo:
+            "Somos uma equipe apaixonada por ginástica rítmica, formada por três profissionais com mais de X anos de
+            experiência. Nossa missão é inspirar, motivar e desenvolver o potencial de cada aluno, promovendo o amor
+            pelo esporte e um ambiente acolhedor para todos."
+            Subseções: "Nossa história", "Missão e Visão", "Nossa equipe" (fotos e mini biografias das sócias).
+          </p>
+        </div>
+      </div>
+
+      <div id="time" class="cartao-info cartao-time">
+        <h2>
+          A Equipe
+        </h2>
+        <p>
+          Exemplo de conteúdo:
+          "Conheça nossas sócias e treinadoras, cada uma com uma história única e uma paixão comum pela ginástica
+          rítmica. Nossa experiência em competições e treinamentos faz toda a diferença em cada aula."
+          Pode ter uma linha do tempo da experiência de cada sócia.
+        </p>
+      </div>
+    </section>
+
+    <section class="info-servicos">
+      <div id="serv">
+        <h2>
+          Serviços
+        </h2>
+        <p>
+          Exemplo de conteúdo:
+          "Oferecemos aulas para diferentes níveis e idades, além de treinos personalizados para competições e
+          desenvolvimento técnico. Confira nossas modalidades e encontre o programa perfeito para você!"
+          Subseções: "Aulas para iniciantes", "Treinamento competitivo", "Aulas particulares" com detalhes de cada
+          serviço.
+        </p>
+      </div>
+    </section>
+
+    <section class="info-produtos">
+      <div class="produtos">
+        <div id="modalidades">
+          <h2>
+            Modalidades
+          </h2>
+          <p>
+            Detalhamento das aulas oferecidas:
+            "Desde aulas de iniciação para crianças até treinamentos avançados, aqui, você encontra a modalidade ideal!"
+            Subseções: "Iniciação", "Desenvolvimento Técnico", "Avançado", com uma descrição clara de cada nível.
+          </p>
+        </div>
+
+        <div id="programas">
+          <h2>
+            Programa de Treinamento
+          </h2>
+          <p>
+            Descrição detalhada dos programas de treinamento, com categorias para cada idade e nível de experiência.
+            Exemplo de conteúdo:
+            "Desenvolvemos programas especiais que respeitam as habilidades de cada aluno, com foco no crescimento
+            gradual e
+            seguro."
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div id="inscreva-se">
+        <h2>
+          Inscreva-se
+        </h2>
+        <p>
+          Formulário de inscrição online e FAQ com as perguntas mais frequentes sobre as aulas, horários, e o que levar
+          para as aulas.
+        </p>
+      </div>
+
+      <address id="contato">
+        <div>
+
+          <h2>
+            Contato
+          </h2>
+        </div>
+        <div>
+
+          <p>
+            Formulário de contato e informações de localização, telefone, e redes sociais.
+
+            Formulário de inscrição e de perguntas, com horário de atendimento e endereços de redes sociais.
+          </p>
+        </div>
+      </address>
+    </footer>
+
   </main>
 </body>
+
 </html>
