--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -2,17 +2,17 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Página teste</title>
-  <link rel="stylesheet" href="/estilos.css" />
+  <link rel="stylesheet" href="./estilos.css" />
 </head>
 
 <body>
   <main>
     <header class="cabecalho">
-      <img src="" alt="Foto logo">
+      <img src="./logo-iniciais.jpg" alt="Foto logo">
       <nav>
         <ul class="menu">
           <a href="#home">
@@ -36,6 +36,9 @@
           <a href="#programas">
             <li>Programas</li>
           </a>
+          <a href="#inscreva-se">
+            <li>Inscreva-se</li>
+          </a>
           <a href="#contato">
             <li>contato</li>
           </a>
@@ -45,14 +48,14 @@
 
     <section id="home" class="inicio">
       <div class="nome-slogan">
-        <h1>Simpliflic</h1>
+        <h1>Conexão Rítmica</h1>
         <h2>Slogan</h2>
       </div>
       <div class="txt-inicio">
-      <p>
-        Um resumo da empresa com um slogan como: “Transformando sonhos em movimento.”
-        Um breve resumo sobre as sócias e sua experiência.
-      </p>
+        <p>
+          Um resumo da empresa com um slogan como: “Transformando sonhos em movimento.”
+          Um breve resumo sobre as sócias e sua experiência.
+        </p>
       </div>
     </section>
 
