--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -36,9 +36,6 @@
           <a href="#programas">
             <li>Programas</li>
           </a>
-          <a href="#inscreva-se">
-            <li>Inscreva-se</li>
-          </a>
           <a href="#contato">
             <li>contato</li>
           </a>
@@ -48,7 +45,7 @@
 
     <section id="home" class="inicio">
       <div class="nome-slogan">
-        <h1>Conexão Rítmica</h1>
+        <h1>Simpliflic</h1>
         <h2>Slogan</h2>
       </div>
       <div class="txt-inicio">
