update texto, imagens

--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -12,8 +12,8 @@
 <body>
   <main>
     <header class="cabecalho">
-      <img src="" alt="Foto logo">
-      <nav> 
+      <img src="/src/imagens/Simpliflick logo cortada.png" alt="Foto logo">
+      <nav>
         <ul class="menu">
           <a href="#home">
             <li>Início</li>
@@ -90,6 +90,10 @@
           </div>
         </div>
 
+        <img src="" alt="Carrossel fotos" />
+        <img src="Carrosselfotos" alt="Carrossel fotos">
+        <img src="Carrossel fotos" alt="Carrossel fotos">
+
 
         <div id="sobre" class="cartao-info">
           <h2>Sobre Nós</h2>
@@ -103,6 +107,10 @@
         </div>
       </div>
 
+      <img src="Fotos equipe" alt="Fotos equipe">
+      <img src="Fotos equ" alt="Fotos equipe">
+      <img src="Fotos equipe" alt="Fotos equipe">
+
       <div id="time" class="cartao-info cartao-time">
         <h2>
           A Equipe
@@ -114,6 +122,7 @@
           <div>
             <h3>Renan Chiarelli</h3>
           </div>
+          <img src="Foto profissional" alt="Foto perfil profissional">
           <div>
             <p>
               Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
@@ -362,12 +371,26 @@
             <p>
               Telefone para contato
             </p>
+            <div>
+              <img src="wpp imagem" alt="wpp imagem">
+              <p>(xx)xxxxx-xxxx</p>
+            </div>
           </div>
 
           <div>
             <p>
               Redes sociais
             </p>
+            <div>
+              <img src="imagem rede social" alt="imagem rede social">
+              <p>inta - @simpliflic</p>
+            </div>
+            <div>
+              <img src="imagem rede social" alt="imagem rede social">
+              <p>TikTok</p>
+            </div>
+            
+            
           </div>
         </div>
       </address>
