--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <img src="" alt="Carrossel fotos" />
+        <img src="/src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
         <img src="Carrosselfotos" alt="Carrossel fotos">
         <img src="Carrossel fotos" alt="Carrossel fotos">
 
