atualização de caminho img

--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <header class="cabecalho">
-      <img src="/src/imagens/Simpliflic logo cortada.png" alt="Foto logo">
+      <img src="src/imagens/Simpliflic logo cortada.png" alt="Foto logo">
       <nav>
         <ul class="menu">
           <a href="#home">
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <img src="/src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
+        <img src="src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
         <img src="Carrosselfotos" alt="Carrossel fotos">
         <img src="Carrossel fotos" alt="Carrossel fotos">
 
