--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <header class="cabecalho">
-      <img src="src/imagens/Simpliflic logo cortada.png" alt="Foto logo">
+      <img class="foto-cabecalho" src="src/imagens/Simpliflic logo cortada.png" alt="Foto logo">
       <nav>
         <ul class="menu">
           <a href="#home">
