--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -12,7 +12,7 @@
 <body>
   <header class="cabecalho">
     <div class="container">
-      
+
       <div class="foto-container">
         <img class="foto-cabecalho" src="src/imagens/Simpliflic logo cortada.png" alt="Foto logo">
       </div>
@@ -59,11 +59,12 @@
     </div>
   </header>
   <main>
-    <section id="home" class="inicio">
+    <section id="home" class="secao secao-inicio">
       <div class="nome-slogan">
         <h1>Simpliflic</h1>
         <h2>A vida é mais divertida de cabeça para baixo</h2>
       </div>
+
       <div class="txt-inicio">
         <div>
           <p>
@@ -78,37 +79,41 @@
       </div>
     </section>
 
-    <section id="quem-somos" class="infos-simpliflic">
+    <section id="quem-somos" class="secao-infos-simpliflic">
       <div class="info-gerais cartao-info">
-        <div id="quemsomos">
-          <h2>
-            Quem Somos
-          </h2>
-          <div>
+        <div class="secao">
+
+          <div id="quemsomos">
+            <h2>
+              Quem Somos
+            </h2>
             <div>
-              <p>
-                Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte <em>acrobática</em>.
-              </p>
-            </div>
-            <div>
-              <p>
-                Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>, uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete cabeças.
-              </p>
-            </div>
-            <div>
-              <p>
-                Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha conhecer um pouco mais como é essa nova percepção de mundo!
-              </p>
+              <div>
+                <p>
+                  Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte <em>acrobática</em>.
+                </p>
+              </div>
+              <div>
+                <p>
+                  Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>, uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete cabeças.
+                </p>
+              </div>
+              <div>
+                <p>
+                  Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha conhecer um pouco mais como é essa nova percepção de mundo!
+                </p>
+              </div>
             </div>
           </div>
         </div>
 
-        <img src="src/imagens/Simpliflick [Tamanho original].pn" alt="Carrossel fotos" />
-        <img src="Carrosselfotos" alt="Carrossel fotos">
-        <img src="Carrossel fotos" alt="Carrossel fotos">
+<div>
+        <img src="src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
+        <img src="/src/imagens/pexels-olly-3763700.jpg" alt="Carrossel fotos">
+        <img src="/src/imagens/pexels-tima-miroshnichenko-6572553 (1).jpg" alt="Carrossel fotos">
+</div>
 
-
-        <div id="sobre" class="cartao-info">
+        <div id="sobre" class="secao cartao-info">
           <h2>Sobre Nós</h2>
           <div>
             <div>
@@ -118,29 +123,30 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <img src="Fotos equipe" alt="Fotos equipe">
-      <img src="Fotos equ" alt="Fotos equipe">
-      <img src="Fotos equipe" alt="Fotos equipe">
+        <img src="Fotos equipe" alt="Fotos equipe">
+        <img src="Fotos equ" alt="Fotos equipe">
+        <img src="Fotos equipe" alt="Fotos equipe">
 
-      <div id="time" class="cartao-info cartao-time">
-        <h2>
-          A Equipe
-        </h2>
-        <div>
+        <div id="time" class="secao cartao-info cartao-time">
+          <h2>
+            A Equipe
+          </h2>
           <div>
-            <h2>Conheça um pouco mais sobre os profissionais!</h2>
+            <div>
+              <h2>Conheça um pouco mais sobre os profissionais!</h2>
+            </div>
+            <div>
+              <h3>Renan Chiarelli</h3>
+            </div>
+            <img src="Foto profissional" alt="Foto perfil profissional">
+            <div>
+              <p>
+                Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
+              </p>
+            </div>
           </div>
-          <div>
-            <h3>Renan Chiarelli</h3>
-          </div>
-          <img src="Foto profissional" alt="Foto perfil profissional">
-          <div>
-            <p>
-              Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
-            </p>
-          </div>
+
         </div>
       </div>
     </section>
@@ -409,4 +415,5 @@
     </address>
   </footer>
 </body>
+
 </html>
