--- a/simpliflic-main.html
+++ b/simpliflic-main.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Simpliflic</title>
   <link rel="stylesheet" href="css/estilos.css" />
+  <script>
+    setInterval(() => location.reload(), 3000); // Atualiza a cada 3 segundos
+  </script>
 </head>
 
 <body>
@@ -60,98 +63,101 @@
   </header>
   <main>
     <section id="home" class="secao secao-inicio">
+
       <div class="nome-slogan">
         <h1>Simpliflic</h1>
         <h2>A vida é mais divertida de cabeça para baixo</h2>
       </div>
 
       <div class="txt-inicio">
-        <div>
-          <p>
-            As acrobacias não precisam ser tão complexas assim, pensando nisso surgiu a <strong>Simpliflic</strong>!
-          </p>
-        </div>
-        <div>
-          <p>
-            Nosso trabalho é facilitar seu entendimento sobre as piruetas da vida, afinal, a vida de cabeça para baixo é muito mais divertida
-          </p>
-        </div>
+
+        <p>
+          As acrobacias não precisam ser tão complexas assim, pensando nisso surgiu a <strong>Simpliflic</strong>!
+        </p>
+
+        <p>
+          Nosso trabalho é facilitar seu entendimento sobre as piruetas da vida, afinal, a vida de cabeça para baixo é muito mais divertida
+        </p>
+
       </div>
     </section>
 
-    <section id="quem-somos" class="secao-infos-simpliflic">
-      <div class="info-gerais cartao-info">
-        <div class="secao">
+    <section id="quem-somos" class="secao">
 
-          <div id="quemsomos">
-            <h2>
-              Quem Somos
-            </h2>
-            <div>
-              <div>
-                <p>
-                  Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte <em>acrobática</em>.
-                </p>
-              </div>
-              <div>
-                <p>
-                  Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>, uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete cabeças.
-                </p>
-              </div>
-              <div>
-                <p>
-                  Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha conhecer um pouco mais como é essa nova percepção de mundo!
-                </p>
-              </div>
-            </div>
+      <div class="container-quem-somos">
+        <div class="titulo-quem-somos">
+          <h2>Quem Somos</h2>
+        </div>
+
+        <div class="container-p-quem-somos">
+
+          <div class="primeiro-p-quem-somos">
+            <p>
+              Com uma equipe de profissionais apaixonados pelo <em>corpo e movimento</em> nos especializamos na parte <em>acrobática</em>.
+            </p>
+          </div>
+
+          <div class="segundo-p-quem-somos">
+            <p>
+              Voltados para facilitar a compreensão dos movimentos acrobáticos que surgiu a <strong>Simpliflic</strong>, uma empresa que acredita que as <em>acrobacias</em> não precisam ser, necessariamente, um bicho de sete cabeças.
+            </p>
+          </div>
+
+          <div class="terceiro-p-quem-somos">
+            <p>
+              Tentaremos, ao máximo, facilitar sua jornada nesse novo mundo, com <em>exercícios personalizados</em> e ampla experiência dos nossos profissionais o aprendizado se torna mais simples e consistente. Venha conhecer um pouco mais como é essa nova percepção de mundo!
+            </p>
           </div>
         </div>
 
-<div>
-        <img src="src/imagens/Simpliflick [Tamanho original].png" alt="Carrossel fotos" />
-        <img src="/src/imagens/pexels-olly-3763700.jpg" alt="Carrossel fotos">
-        <img src="/src/imagens/pexels-tima-miroshnichenko-6572553 (1).jpg" alt="Carrossel fotos">
-</div>
 
-        <div id="sobre" class="secao cartao-info">
-          <h2>Sobre Nós</h2>
+      </div>
+
+      <div>
+        <img src="src/imagens/Simpliflick [Tamanho original].pn" alt="Carrossel fotos" />
+        <img src="/src/imagens/pexels-olly-3763700.jp" alt="Carrossel fotos">
+        <img src="/src/imagens/pexels-tima-miroshnichenko-6572553 (1).jp" alt="Carrossel fotos">
+      </div>
+
+      <div id="sobre" class="secao cartao-info">
+        <h2>Sobre Nós</h2>
+        <div>
           <div>
-            <div>
-              <p>
-                Somos uma equipe apaixonada pelo <em>corpo e movimento</em>, formada por Renan Chiarelli, profissional com mais de 20 anos de experiência em diferentes âmbitos da modalidade da <em>Ginástica Artística Masculina</em> dentre esses, sendo mais de 5 anos como professor da <em>Ginástica Artística Feminina</em>. Compondo uma base de experiência ampla e sólida para te ajudar a concluir seus objetivos com segurança, consciência e simplicidade.
-              </p>
-            </div>
+            <p>
+              Somos uma equipe apaixonada pelo <em>corpo e movimento</em>, formada por Renan Chiarelli, profissional com mais de 20 anos de experiência em diferentes âmbitos da modalidade da <em>Ginástica Artística Masculina</em> dentre esses, sendo mais de 5 anos como professor da <em>Ginástica Artística Feminina</em>. Compondo uma base de experiência ampla e sólida para te ajudar a concluir seus objetivos com segurança, consciência e simplicidade.
+            </p>
           </div>
         </div>
+      </div>
 
-        <img src="Fotos equipe" alt="Fotos equipe">
-        <img src="Fotos equ" alt="Fotos equipe">
-        <img src="Fotos equipe" alt="Fotos equipe">
+      <img src="Fotos equipe" alt="Fotos equipe">
+      <img src="Fotos equ" alt="Fotos equipe">
+      <img src="Fotos equipe" alt="Fotos equipe">
 
-        <div id="time" class="secao cartao-info cartao-time">
-          <h2>
-            A Equipe
-          </h2>
+      <div id="time" class="secao cartao-info cartao-time">
+        <h2>
+          A Equipe
+        </h2>
+        <div>
           <div>
-            <div>
-              <h2>Conheça um pouco mais sobre os profissionais!</h2>
-            </div>
-            <div>
-              <h3>Renan Chiarelli</h3>
-            </div>
-            <img src="Foto profissional" alt="Foto perfil profissional">
-            <div>
-              <p>
-                Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
-              </p>
-            </div>
+            <h2>Conheça um pouco mais sobre os profissionais!</h2>
           </div>
-
+          <div>
+            <h3>Renan Chiarelli</h3>
+          </div>
+          <img src="Foto profissional" alt="Foto perfil profissional">
+          <div>
+            <p>
+              Nascido em Brasília, no dia 25 de março, iniciou na <em>GAM</em> aos 4 anos de idade e seguiu no meio competitivo dos 6/7 anos até seus 17 anos. Nesse tempo participou de diversos campeonatos representando o seu clube, Setor Leste, juntando inúmeras conquistas pessoais e olhar crítico a detalhes que podem ajudar na compreensão de movimentos. Aos 18 anos começou a sua caminhada profissional na Universidade de Brasília - UnB, ainda com 18 anos aprofundou-se no mundo ginástico através de monitoria e aos 19 anos, com estágios acadêmicos formais. Seguindo até hoje envolvido nesse meio ginástico como treinador e árbitro.
+            </p>
+          </div>
         </div>
+
+      </div>
       </div>
     </section>
 
-    <section class="info-servicos">
+    <section class="secao info-servicos">
       <div id="serv">
         <h2>
           Serviços
@@ -167,7 +173,7 @@
       </div>
     </section>
 
-    <section class="info-produtos">
+    <section class="secao info-produtos">
       <div class="produtos">
         <div id="modalidades">
           <h2>
@@ -283,7 +289,7 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="secao">
     <div id="inscreva-se">
       <h2>
         Inscreva-se
